add new project or page with empty content
git-svn-id: http://svn.vdombox.ru/flextools/trunk@6866 230e8929-42e3-3b44-a413-55659dd3a577

--- a/Help/Editor/v.01/src/VdomHelpEditor.mxml
+++ b/Help/Editor/v.01/src/VdomHelpEditor.mxml
@@ -258,7 +258,7 @@
 				var pageTitle : String = "Page " + count;
 
 				sqlProxy.addPage(cmboxProduct.selectedItem.name, "en_US", pageName, 0, 
-								 pageTitle, "write Description", "it is  "+ pageName);
+								 pageTitle, "write Description", "");
 
 				toc.appendChild(XML("<page title = 'page " + count+ "' name = 'page_" + count+ "' isBranch='true' />"));
 				tree.dataProvider = null;
