srart up in flex 4.5 (add skinClass)
git-svn-id: http://svn.vdombox.ru/flextools/trunk@6872 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/ApplicationsManagment/src/net/vdombox/ide/modules/applicationsManagment/view/components/EditApplicationView.mxml
+++ b/IDE/v.02/modules/ApplicationsManagment/src/net/vdombox/ide/modules/applicationsManagment/view/components/EditApplicationView.mxml
@@ -4,6 +4,7 @@
 					xmlns:s="library://ns.adobe.com/flex/spark"
 					xmlns:components="net.vdombox.ide.modules.applicationsManagment.view.components.*"
 					
+					skinClass="spark.skins.spark.SkinnableContainerSkin"
 					creationPolicy="all" height="100%" width="100%"
 					color="white">
 
@@ -20,6 +21,7 @@
 				if ( applicationsList && applicationsList.skin )
 					applicationsList.skin[ "background" ].alpha = .1;
 			}
+			
 		]]>
 	</fx:Script>
 
