srart up in flex 4.5 (add skinClass)
git-svn-id: http://svn.vdombox.ru/flextools/trunk@6873 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/TypesCategory.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/TypesCategory.mxml
@@ -3,7 +3,8 @@
 					xmlns:mx="library://ns.adobe.com/flex/halo"
 					xmlns:s="library://ns.adobe.com/flex/spark"
 					height="100%" width="100%"
-					backgroundColor="#70737A">
+					backgroundColor="#70737A"
+					skinClass="spark.skins.spark.SkinnableContainerSkin">
 
 	<fx:Script>
 		<![CDATA[
