--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/panels/ObjectAttributesPanel.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/panels/ObjectAttributesPanel.mxml
@@ -196,13 +196,15 @@
 
 		<components:PanelButton id="deleteButton"
 								icon="@Embed('assets/delete.png')" label="{ resourceManager.getString( 'Wysiwyg_General', 'object_attributes_panel_delete') }"
-								click="dispatchEvent( new ObjectAttributesPanelEvent( ObjectAttributesPanelEvent.DELETE_REQUEST ))"/>
+								click="dispatchEvent( new ObjectAttributesPanelEvent( ObjectAttributesPanelEvent.DELETE_REQUEST ))"
+								skinClass="net.vdombox.ide.modules.wysiwyg.view.skins.PanelButtonSkin"/>
 
 		<mx:Spacer width="100%"/>
 
 		<components:PanelButton id="saveButton"
 								icon="@Embed('assets/save.png')" label="{ resourceManager.getString( 'Wysiwyg_General', 'object_attributes_panel_save') }"
-								click="dispatchEvent( new ObjectAttributesPanelEvent( ObjectAttributesPanelEvent.SAVE_REQUEST ))"/>
+								click="dispatchEvent( new ObjectAttributesPanelEvent( ObjectAttributesPanelEvent.SAVE_REQUEST ))"
+								skinClass="net.vdombox.ide.modules.wysiwyg.view.skins.PanelButtonSkin"/>
 
 	</s:controlBarContent>
 
