srart up in flex 4.5 (add skinClass)
git-svn-id: http://svn.vdombox.ru/flextools/trunk@6874 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/VdomObjectEditor.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/VdomObjectEditor.mxml
@@ -253,8 +253,7 @@
 	<s:Group height="100%" width="100%">
 		<components:PageRenderer id="renderer" 
 								 height="100%" width="100%"
-								 selectedRenderer="{ selectedRenderer }" includeIn="wysiwyg, wysiwygDisabled, normal, disabled"
-								 skinClass="net.vdombox.ide.modules.wysiwyg.view.skins.PageRendererSkin"/>
+								 selectedRenderer="{ selectedRenderer }" includeIn="wysiwyg, wysiwygDisabled, normal, disabled"/>
 
 		<editors:XMLScriptEditor id="xmlScriptEditor"
 								 height="100%" width="100%"
