--- a/Help/Editor/v.01/src/EditPage.mxml
+++ b/Help/Editor/v.01/src/EditPage.mxml
@@ -45,6 +45,9 @@
 			
 			private function vilidate():void
 			{
+				pageName.text = "";
+				pageLabel.text = "";
+				
 				if(productName != "" && curPage.@name != "" && pageLn != "")
 					var resoult : Object = sqlProxy.getPage(productName, pageLn, curPage.@name );
 				
@@ -105,11 +108,11 @@
 			<mx:Canvas width="100%" height="100%" >
 				
 				<mx:Label  x="17" y="13" text="Label:" />
-				<mx:TextInput id="pageLabel" x="65" y="11" text="Label of product" width="211"/>
+				<mx:TextInput id="pageLabel" x="65" y="11" text="" width="211"/>
 				
 				<mx:Label x="18" y="42" text="Name:"/>
 				<mx:TextInput id="pageName" x="65" y="40" width="211" editable="false"
-							  text="Like 'VDOM_IDE'"/>
+							  text=""/>
 				
 				<mx:Label x="18" y="194" text="Version:"/>
 				<mx:Label id="pageVersion" x="77" y="194" text="12"  width="41"/>
