--- a/Help/Editor/v.01/src/EditProduct.mxml
+++ b/Help/Editor/v.01/src/EditProduct.mxml
@@ -92,11 +92,11 @@
 			<mx:Canvas width="100%" height="100%" >
 				
 				<mx:Label  x="17" y="13" text="Label:" />
-				<mx:TextInput id="productLabel" x="65" y="11" text="Label of product" width="211"/>
+				<mx:TextInput id="productLabel" x="65" y="11" width="211"/>
 				
 				<mx:Label x="18" y="42" text="Name:"/>
 				<mx:TextInput id="productName" x="65" y="40" width="211" editable="false"
-							  text="Like 'VDOM_IDE'"/>
+							  text=""/>
 				
 				<mx:Label x="14" y="194" text="Language:"/>
 				<mx:Label id="productLanguage" x="87" y="194" text="EN" width="55"/>
