set title of product as compulsory attribute and set product xml name as product title
git-svn-id: http://svn.vdombox.ru/flextools/trunk@6877 230e8929-42e3-3b44-a413-55659dd3a577

--- a/Help/Editor/v.01/src/AddProduct.mxml
+++ b/Help/Editor/v.01/src/AddProduct.mxml
@@ -88,6 +88,17 @@
 			
 			private function okHandler():void 
 			{
+				if (productTitle.text.length == 0) {
+					lbError.text = "'Title' field is empty";
+					errorFormItem.label = "Error:"
+					//					formHeading.addChild(errorFormItem);
+					trace("Error: 'Title' field is empty")
+					
+					if(!form.contains(errorFormItem))
+						form.addChild(errorFormItem);
+
+					return;
+				}
 				if (productName.text.length == 0) 
 				{
 					productName.text = UIDUtil.createUID();
