git-svn-id: http://svn.vdombox.ru/flextools/trunk@6879 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/windows/resourceBrowserWindow/ListItem.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/windows/resourceBrowserWindow/ListItem.mxml
@@ -29,13 +29,26 @@
 			
 			[Bindable]
 			private var resourceVO : ResourceVO;
-
+			
+			private var temp:int = 0;
+			
 			override public function set data ( value : Object ) : void 
 			{
 				super.data = value;
 				resourceVO = value as ResourceVO;
 				
+				if ( resourceVO )
+				{
+					if ( resourceVO.icon == null )
+						trace( "ListItem:        " + temp + "name " +resourceVO.name + "type " +resourceVO.type + "id " +resourceVO.id + " icon null   " );
+					else 
+						trace( "ListItem:        " + temp + "name " +resourceVO.name + "type " +resourceVO.type + "id " +resourceVO.id + " icon " );
+					temp++;
+				}
+				
+				
 				resName.text = '';
+//				проверить
 				res.text = '';				
 				
 				try 
