1) bug fix: on creating page content don't duplicate head/body tags 2) export product xml file to selected directory, not to docs directory
git-svn-id: http://svn.vdombox.ru/flextools/trunk@6882 230e8929-42e3-3b44-a413-55659dd3a577

--- a/Help/Editor/v.01/src/HTML_WYSIWYG.mxml
+++ b/Help/Editor/v.01/src/HTML_WYSIWYG.mxml
@@ -47,10 +47,12 @@
 				var patternHead	: RegExp;
 				var metaTeg		: String;
 				var cssTeg		: String;
+				var scriptTeg	: String;
 				var htmlTxt		: String;
 				
 				metaTeg = "<meta http-equiv=\"Content-Type\" content=\"text/html; charset=utf-8\" />";
 				cssTeg = "<link rel='stylesheet' href='app-storage:/main.css' type='text/css'></link>";
+				scriptTeg = "<script src='app-storage:/searchhi_slim.js'></script>";
 				patternHead = /<[ ]*head[ ]*(>|\/[ ]*>)/i;
 				
 				editorData = instancesInitialized ? domWindow.CKEDITOR.instances.editor1.getData() : "";
@@ -63,6 +65,7 @@
 							"<head>" + "\n" +
 								metaTeg + "\n" +
 								cssTeg + "\n" +
+								scriptTeg + "\n" +
 							"</head>" + "\n" +
 							"<body>" + "\n" +
 								editorData + "\n" +
