--- a/Help/Editor/v.01/src/VdomHelpEditor.mxml
+++ b/Help/Editor/v.01/src/VdomHelpEditor.mxml
@@ -51,6 +51,8 @@
 			
 			private var blockWindow	: TitleWindow;
 			
+			private var treePagesBuffer : Array;
+			
 			/***
 			 *
 			 * + сохранить экспортируемую хмл
@@ -130,6 +132,7 @@
 
 			private function treeChangeHandler(lstEvt:ListEvent) : void
 			{
+				trace ("[VdomHelpEditor] treeChangeHandler");	
 //			showSelectedPage(tree.selectedItem.@name);
 //			trace("Tree Change");
 				var tocString : String = tree.dataProvider.toXMLString();
@@ -242,9 +245,11 @@
 
 			private var count : int         = 0;
 
-			private function addItem() : void
+			private function addItem(aCopiedItem:Object = null) : void
 			{
-				var selectedPage : String = "";
+				var selectedPage	: String = "";
+				var pageTitle		: String = "";
+				var pageName		: String = "";
 
 				if ( tree.selectedItem )
 					selectedPage = tree.selectedItem.@name;
@@ -253,7 +258,7 @@
 
 				toc = tree.dataProvider[ 0 ];
 
-				var pageName : String = UIDUtil.createUID();
+				pageName = UIDUtil.createUID();
 
 //			search vacant name in dataBase
 				while ( sqlProxy.checkPageName(pageName) )
@@ -262,12 +267,22 @@
 //				trace("Page in data base: " + pageName);
 				}
 
-				var pageTitle : String = "Page " + count;
+				
+				if (aCopiedItem) {
+					pageTitle = aCopiedItem[0]["title"];
+					sqlProxy.addPage(cmboxProduct.selectedItem.name, "en_US", pageName, 0, 
+						pageTitle, aCopiedItem[0]["description"], aCopiedItem[0]["content"]);
+				} else {
+					pageTitle = "Page " + count;
+					sqlProxy.addPage(cmboxProduct.selectedItem.name, "en_US", pageName, 0, 
+									 pageTitle, "write Description", "");
+				}
 
-				sqlProxy.addPage(cmboxProduct.selectedItem.name, "en_US", pageName, 0, 
-								 pageTitle, "write Description", "");
-
-				toc.appendChild(XML("<page title = 'page " + count+ "' name = '" + pageName+ "' isBranch='true' />"));
+				if (!aCopiedItem || !aCopiedItem[0]["parentPageName"] || (aCopiedItem[0]["parentPageName"] == cmboxProduct.selectedItem.name)) {
+					toc.appendChild(XML("<page title = '" + pageTitle+ "' name = '" + pageName+ "' isBranch='true' />"));
+				} else {
+					toc..page.(@name == aCopiedItem[0]["parentPageName"]).appendChild(XML("<page title = '" + pageTitle+ "' name = '" + pageName+ "' isBranch='true' />"));
+				}
 				tree.dataProvider = null;
 
 				tree.validateNow();
@@ -297,11 +312,13 @@
 				{
 					delete toc..page.( @name == tree.selectedItem.@name )[ 0 ];
 //				toc = XML(tree.dataProvider);
-
+					
 					tree.dataProvider = null;
 					tree.validateNow();
 					tree.dataProvider = toc;
 
+					sqlProxy.setToc(tree.dataProvider.toXMLString(), cmboxProduct.selectedItem.name);
+					
 					tree.validateNow();
 					tree.expandItem(toc, true);
 
@@ -900,7 +917,7 @@
 
 			private function dragDropHandler(event:Event) : void
 			{
-//			trace('dragDropHandler');
+				trace ("[VdomHelpEditor] dragDropHandler");
 			}
 
 			private function editPage() : void
@@ -925,6 +942,81 @@
 			{
 				// TODO Auto-generated method stub
 				this.html_wysiwyg.addEventListener(HTML_WYSIWYG.EVENT_WYSIWYG_SAVE_COMBINATION_CLICKED, onWysiwygSaveCombinationClicked);
+			}
+			
+			private function onTreeKeyboardKeyUp(aKeyboardEvent:KeyboardEvent) : void
+			{
+				switch(aKeyboardEvent.keyCode)
+				{
+					case Keyboard.C:
+					{
+						if (aKeyboardEvent.ctrlKey) {
+							if (!tree.selectedItem) {
+								return;
+							}
+							copyTreePages(XML(tree.selectedItem))
+						}
+						break;
+					}
+					case Keyboard.V:
+					{
+						if (aKeyboardEvent.ctrlKey) {
+							pasteTreePages();
+						}
+						break;
+					}
+					default:
+					{					
+						break;
+					}
+				}
+			}
+			
+			protected function tree_creationCompleteHandler(event:FlexEvent):void
+			{
+				// TODO Auto-generated method stub
+				tree.addEventListener(KeyboardEvent.KEY_UP, onTreeKeyboardKeyUp);
+			}
+			
+			private function copyTreePages(pagesXml : XML):void
+			{
+				var resoult	: Object;
+				
+				clearTreePagesBuffer();
+				
+				treePagesBuffer = [];
+				
+				resoult = sqlProxy.getPage(cmboxProduct.selectedItem.name, "en_US", pagesXml.@name);
+				if (resoult)
+				{
+					resoult[0]["parentPageName"] = tree.selectedItem.@name;
+					treePagesBuffer.push(resoult);
+				}
+				
+			}
+			
+			private function pasteTreePages() : void
+			{
+				if (!treePagesBuffer) return;
+				if (!tree.selectedItem) return;
+				
+				// TODO
+				var i:uint=0;
+				for each (var treePage:Object in treePagesBuffer) 
+				{
+					if (i == 0) {
+						treePage[0]["parentPageName"] = tree.selectedItem.@name;
+					}
+					addItem(treePage);
+					i++;
+				}
+				
+				clearTreePagesBuffer();
+			}
+			
+			private function clearTreePagesBuffer():void
+			{
+				treePagesBuffer = null;
 			}
 			
 		]]>
@@ -1000,24 +1092,18 @@
 								 borderColor="#999999"
 								 themeColor="#656565"
 								 textRollOverColor="#000000"
-								 selectionColor="#0000FF" />
+								 selectionColor="#0000FF"/>
 
 				</mx:HBox>
-				<mx:Tree id="tree"
-						 width="100%"
-						 height="100%"
-						 color="#000000"
-						 showRoot="true"
-						 labelField="@title"
-						 dragEnabled="true"
-						 dropEnabled="true"
-						 dragDrop="dragDropHandler(event);"
-						 change="{treeChangeHandler(event)}"
-						 dragMoveEnabled="true"
+				<mx:Tree id="tree" width="100%" height="100%" color="#000000" showRoot="true" labelField="@title"
+						 dragEnabled="true" dragMoveEnabled="true" dropEnabled="true"
 						 folderOpenIcon="@Embed('../assets/open_folder.png')"
 						 folderClosedIcon="@Embed('../assets/close_folder.png')"
 						 openDuration="0"
-						 defaultLeafIcon="@Embed('../assets/page.png')" />
+						 defaultLeafIcon="@Embed('../assets/page.png')" 
+						 dragDrop="dragDropHandler(event);"
+						 change="{treeChangeHandler(event)}"
+						 creationComplete="tree_creationCompleteHandler(event)"/>
 
 				<mx:HBox paddingLeft="3">
 					<mx:Button label="Add Page"
