--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/main/Body.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/main/Body.mxml
@@ -11,12 +11,21 @@
 			import net.vdombox.ide.modules.wysiwyg.view.components.TypesAccordionHeader;
 		]]>
 	</fx:Script>
-
-	<mx:Accordion id="typesAccordion"
-				  height="100%" width="90"
-				  headerStyleName="typesAccordionHeader"
-				  headerRenderer="{ new ClassFactory( TypesAccordionHeader ) }"/>
-
+	<s:Group width="90" height="100%">
+		
+		<s:Rect width="100%" height="100%">
+			<s:fill>
+				<s:SolidColor color="0x440044" />
+			</s:fill>
+		</s:Rect>
+		
+		<mx:Accordion id="typesAccordion" width="100%" height="100%" 
+					  headerRenderer="{ new ClassFactory( TypesAccordionHeader ) }"
+					  headerStyleName="typesAccordionHeader"/>
+		
+	</s:Group>
+		
+	
 	<components:WorkArea id="workArea"
 						 height="100%" width="100%"/>
 
