--- a/IDE/v.02/modules/Tree/src/net/vdombox/ide/modules/tree/view/skins/TextAreaShadowedSkin.mxml
+++ b/IDE/v.02/modules/Tree/src/net/vdombox/ide/modules/tree/view/skins/TextAreaShadowedSkin.mxml
@@ -10,7 +10,7 @@
 		* @copy spark.skins.spark.ApplicationSkin#hostComponent
 		*/
 		[HostComponent("spark.components.TextArea")]
-		]]>
+		]]>		
 	</fx:Metadata>
 
 	<fx:Script fb:purpose="styling">
@@ -195,6 +195,8 @@
 	<s:states>
 		<s:State name="normal"/>
 		<s:State name="disabled"/>
+		<s:State name="disabledWithPrompt"/>
+		<s:State name="normalWithPrompt"/>
 	</s:states>
 
 	<!-- border -->
