--- a/IDE/v.02/modules/Tree/src/net/vdombox/ide/modules/tree/view/skins/TextInputShadowedSkin.mxml
+++ b/IDE/v.02/modules/Tree/src/net/vdombox/ide/modules/tree/view/skins/TextInputShadowedSkin.mxml
@@ -156,6 +156,8 @@
 	<s:states>
 		<s:State name="normal"/>
 		<s:State name="disabled"/>
+		<s:State name="disabledWithPrompt"/>
+		<s:State name="normalWithPrompt"/>
 	</s:states>
 
 	<!-- border -->
