set #Page(GUID) only for existing pages
git-svn-id: http://svn.vdombox.ru/flextools/trunk@6901 230e8929-42e3-3b44-a413-55659dd3a577

--- a/Help/Editor/v.01/src/VdomHelpEditor.mxml
+++ b/Help/Editor/v.01/src/VdomHelpEditor.mxml
@@ -759,7 +759,17 @@
 							pageGUID = "";
 							if (strPageLink.search(patternGUID) != -1)
 							{
-								pageGUID = strPageLink.substr(strPageLink.search(patternGUID), 36);  
+								pageGUID = strPageLink.substr(strPageLink.search(patternGUID), 36);
+								if (!pageExistsInDB(pageGUID)) {
+									continue;
+								}
+								
+								function pageExistsInDB(pageName:String) : Boolean 
+								{
+									if (sqlProxy.getPage(cmboxProduct.selectedItem.name, "en_US", pageName)) 
+										return true;
+									return false;
+								}
 							}
 							
 							var newPageLink : String = "<a href=\"#Page(" + pageGUID + ")\"";
